# SECCON-Beginners-CTF-2025

workspaces/crypto/: pyproject.toml
workspaces/crypto/01-Translator/01-translator/: solve.py  tmp.txt
workspaces/crypto/Elliptic4b/: calculate_solution.py  pyproject.toml
workspaces/crypto/seesaw/: pyproject.toml
workspaces/crypto/seesaw/seesaw/: output.txt  resolve.py
workspaces/misc/Chamber-of-Echos/: pyproject.toml  solve.py
workspaces/pwnable/D-compile/d-compile/: objdump.txt  tmp.txt
workspaces/pwnable/pet_sound/: pyproject.toml  solve.py
workspaces/reversing/CrazyLazyProgram1/CrazyLazyProgram1/: CLP1.cs
workspaces/reversing/CrazyLazyProgram2/CrazyLazyProgram2/: ordered.txt
workspaces/reversing/wasm_S_exp/wasm_S_exp/: expected_values.txt  index.txt  stir.py
workspaces/web/MemoRAG/: pyproject.toml
workspaces/web/MemoRAG/memo-rag/app/: app.py
