[project]
name = "elliptic4b"
version = "0.1.0"
description = ""
authors = [
    {name = "ShotaTanemura",email = "shota0711tane@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "fastecdsa (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
