[project]
name = "pet-sound"
version = "0.1.0"
description = ""
authors = [
    {name = "ShotaTanemura",email = "shota0711tane@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
